Style for index

--- a/УЦСБ/templates/index.html
+++ b/УЦСБ/templates/index.html
@@ -4,6 +4,10 @@
 Все сотрудники
 {% endblock %}
 
+{% block style_path %}
+"../style/css/style.css"
+{% endblock %}
+
 {% block header %}
 Главная
 {% endblock %}
