add employee page

--- a/УЦСБ/templates/index.html
+++ b/УЦСБ/templates/index.html
@@ -32,7 +32,7 @@
                 <div class ="main-information tab-pane fade show active" id="employees">
                     <div class ="main-information__nav">
                         <div class="buttons">
-                            <button>Новый сотрудник<img class="button_img" src="../static/img/New_employee.svg" alt=""></button>
+                            <button>Новый сотрудник<img class="button_img" src="../static/img/New_employee.svg" alt=""><a href="/newemployee"></a></button>
                             <button>Новая заявка<img class="button_img" src="../static/img/New_request.svg" alt=""></button>
 
                         </div>
