--- a/УЦСБ/static/css/style.css
+++ b/УЦСБ/static/css/style.css
@@ -194,11 +194,8 @@ h1{
 }
 
 
-.buttons{
-  
-  display: flex;
-  
-  
+.buttons{  
+  display: flex;    
 }
 .main-block__menu .main-block__menu-tabs .nav-tabs .nav-link:focus {
   border: none;
@@ -341,4 +338,110 @@ button:focus {outline:0;}
   border: 0;
   
   background-color: #FAFAFA;
+}
+
+/*stale for page employee*/
+.info_table{
+  display: block;
+}
+.dowload{
+  padding-top: 60px;  
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+.red_star{
+  color: red;
+}
+.dowload-photo {
+  display: flex;
+  margin: 0px;
+  border-color: #344267;
+  border-radius: 8px;
+  height: 40px;
+  width: 240px;
+  justify-content: left;
+  text-align: justify;
+  text-decoration: none;  
+}
+.anyface_photo{
+  height: 40px;
+  width: 40px;
+  background-image: url(../img/newemployee/anyface.svg);
+  background-repeat: no-repeat;
+}
+.text_span_photo{
+  margin: 0px;
+  padding-top: 5px;
+  padding-right: 8px;
+  padding-left: 14px;
+}
+.dowload_photo{
+  height: 10px;
+  width: 12px;
+  margin-top: 10px;
+  padding-top: 7px;
+  background-image: url(../img/newemployee/dowloadphoto.svg);
+  background-repeat: no-repeat;
+}
+
+
+
+
+
+
+.first-row{
+  display: flex;
+  justify-content: space-around;
+}
+.first_column{
+  display: grid;
+  margin-left: 20px;
+}
+.btn_submit{
+  float: right;
+  height: 40px;
+  width: 149px;
+  margin: 0px;
+  background-color:#344267;
+  border: 1px solid;
+  color: #FAFAFA;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  
+  
+  margin: 4px 10px;
+}
+form {
+  background: #FAFAFA;
+  float: left;
+  height: 300px;
+  padding: 0px;
+  border-radius: 0 20px 20px 0;
+  color: #7b7b7b; 
+}
+.wrap_info_employees:after, form div:after{
+  content: "";
+  clear: both;
+}
+form div {
+  margin-bottom: 15px;
+  position: relative;
+}
+label, span {
+  cursor: pointer;
+  font-size: 14px;
+  margin-bottom: 8px;
+  position: relative;
+
+}
+input[type="text"] {  
+  border-width: 0;
+  border-radius: 10px;
+  margin: 0;
+  width: 169px;
+  height: 40px;
+  padding: 10px 15px;
+  background: #e6e6e6;
+  
 }
