--- a/УЦСБ/static/css/style.css
+++ b/УЦСБ/static/css/style.css
@@ -371,24 +371,25 @@ button:focus {outline:0;}
 }
 .text_span_photo{
   margin: 0px;
-  padding-top: 5px;
+  padding-top: 8px;
   padding-right: 8px;
   padding-left: 14px;
 }
 .dowload_photo{
   height: 10px;
   width: 12px;
-  margin-top: 10px;
+  margin-top: 12px;
   padding-top: 7px;
   background-image: url(../img/newemployee/dowloadphoto.svg);
   background-repeat: no-repeat;
 }
 
-
-
-
-
-
+.employee_background{
+  position: fixed;
+    left: 55%;
+    top: 14%;
+    z-index: 0;
+}
 .first-row{
   display: flex;
   justify-content: space-around;
@@ -407,9 +408,7 @@ button:focus {outline:0;}
   color: #FAFAFA;
   border-radius: 10px;
   text-align: center;
-  text-decoration: none;
-  
-  
+  text-decoration: none; 
   margin: 4px 10px;
 }
 form {
@@ -435,7 +434,7 @@ label, span {
   position: relative;
 
 }
-input[type="text"] {  
+input[type="text"], input[type="date"], select{  
   border-width: 0;
   border-radius: 10px;
   margin: 0;
@@ -445,3 +444,121 @@ input[type="text"] {
   background: #e6e6e6;
   
 }
+.document-wrapper {
+  height: 70vh;
+  overflow: auto;  
+  margin-right: 80px;
+}
+.document-table{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.document-block{
+  display: block;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+}
+.btn_document{
+  width: 300px;
+  height: 200px;
+  margin-top: 10px;
+  border-radius: 20px;
+  box-shadow: none;
+  border: 3px solid rgba(83, 103, 141, 0.4);
+  outline: none;
+  background-color: #FAFAFA;
+  cursor: pointer;
+  opacity: 0.4;
+}
+.btn_document p{
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #53678D;
+  opacity: 1;
+  text-align: center;
+}
+.btn_document:focus{
+  outline: 0px;
+  outline-offset: 0;
+  opacity: 1;  
+}
+.btn_document:hover{
+  border: 1px solid rgb(83, 103, 141); 
+  opacity: 1; 
+}
+.document-block span{
+  color: #333333;
+  font-weight: 600;
+  font-size: 13pt;
+  margin-bottom: 10px;
+}
+.btn_img{
+  width: 90px;
+  height: 90px;
+  opacity: 1;
+}
+.span_document{
+  width: 100%;
+  padding-bottom: 10px;
+  padding-left: 11px;
+  padding-right: 11px;
+}
+.document-wrapper::-webkit-scrollbar{
+  background: #e6e8eb;
+  width: 6px;
+  border-radius: 0;  
+}
+.document-wrapper::-webkit-scrollbar-thumb {
+  background: #344267;  
+}
+.newemployee_block{
+  margin-right: 80px;
+  margin-top: 20px;
+  float: right;
+}
+.back{
+  height: 40px;
+  width: 169px;
+  margin: 0px;
+  background-color:#FAFAFA;
+  border: 1px solid;
+  color: #344267;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px 10px;
+  opacity: 0.4;
+}
+.back:focus, .add_employee:focus{
+  outline: 0px;
+  outline-offset: 0;
+}
+.left_spart{
+  width: 9%;
+  height: auto;
+}
+.add_employee{
+  height: 40px;
+  width: 200px;
+  margin: 0px;
+  background-color:#344267;
+  border: 1px solid;
+  color: #FAFAFA;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px 10px;
+}
+
