--- a/УЦСБ/templates/index.html
+++ b/УЦСБ/templates/index.html
@@ -4,10 +4,6 @@
 Все сотрудники
 {% endblock %}
 
-{% block style_path %}
-"../style/css/style.css"
-{% endblock %}
-
 {% block header %}
 Главная
 {% endblock %}
@@ -55,22 +51,367 @@
                         <span>Нарушений</span>
                     </div>
                     <div class="employee-wrapper">
-                        {% for employee in employees %}
                         <div class="employee-block">
                             <div class="employee">
 
-                                <span class="employee-name"><img src="img/avatar.svg"
-                                                                 alt=""><a href="#">{{employee.surname}} {{employee.name}} {{employee.middle_name}}</a></span>
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
                             </div>
                             <span>6 объектов</span>
                             <span>Слесарь-технолог</span>
 
-                            <span>{{employee.violation_amount}}/10 <img src="../static/img/More.svg" alt=""></span>
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
 
 
                         </div>
-                        {% endfor %}
+                        <div class="employee-block">
+                            <div class="employee">
 
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
+                        <div class="employee-block">
+                            <div class="employee">
+
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
+                            </div>
+                            <span>6 объектов</span>
+                            <span>Слесарь-технолог</span>
+
+                            <span>3/10 <img src="../static/img/More.svg" alt=""></span>
+
+
+                        </div>
                     </div>
 
 
@@ -104,12 +445,11 @@
                         <span>Специальность</span>
                         <span>Нарушений</span>
                     </div>
-
                     <div class="employee-wrapper">
                         <div class="employee-block">
                             <div class="employee">
 
-                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">гнатий Анатольевич</a></span>
+                                <span class="employee-name"><img src="img/avatar.svg" alt=""><a href="#">Агафонов Игнатий Анатольевич</a></span>
                             </div>
                             <span>6 объектов</span>
                             <span>Слесарь-технолог</span>
