переходы между страницами

--- a/УЦСБ/templates/base.html
+++ b/УЦСБ/templates/base.html
@@ -29,9 +29,9 @@
             <a href="#" class="logo"><img src="../static/img/logo.svg" alt=""> </a>
             <div class="nav-side">
 
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Home_gray.svg" alt=""></a>
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Document_gray.svg" alt=""></a>
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Add_Personal_gray.svg" alt=""></a>
+                <a href="home" class="nav-side__link"><img class="menu_buttons home_button" src="../static/img/Home_gray.svg"  alt=""></a>
+                <a href="#" class="nav-side__link"><img class="menu_buttons document_button"  src="../static/img/Document_gray.svg" alt=""></a>
+                <a href="newemployee" class="nav-side__link"><img class="menu_buttons person_button" src="../static/img/Add_Personal_gray.svg" alt=""></a>
 
             </div>
             <a href="#" class="help_logo"><img src="../static/img/Help_gray.svg" alt=""></a>
@@ -51,7 +51,7 @@
 
                                 <a href="#" class="photo_nav"><img src="../static/img/photo_name.svg" alt=""></a>
                         </div>
-                    <a href="#" class="quit_nav"></a>
+                    <a href="autorization" class="quit_nav"></a>
                 </div>
             </div>
              {% block content %}{% endblock %}
