--- a/УЦСБ/templates/newemployee.html
+++ b/УЦСБ/templates/newemployee.html
@@ -29,9 +29,9 @@
             <a href="#" class="logo"><img src="../static/img/logo.svg" alt=""> </a>
             <div class="nav-side">
 
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Home_gray.svg" alt=""></a>
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Document_gray.svg" alt=""></a>
-                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Add_Personal_gray.svg" alt=""></a>
+                <a href="home" class="nav-side__link"><img class="menu_buttons" src="../static/img/Home_gray.svg" style="opacity: 0.4;" alt=""></a>
+                <a href="#" class="nav-side__link"><img class="menu_buttons" src="../static/img/Document_gray.svg" style="opacity: 0.4;" alt=""></a>
+                <a href="newemployee" class="nav-side__link"><img class="menu_buttons" src="../static/img/Add_Personal_gray.svg" alt=""></a>
 
             </div>
             <a href="#" class="help_logo"><img src="../static/img/Help_gray.svg" alt=""></a>
