--- a/УЦСБ/static/css/autorization-style.css
+++ b/УЦСБ/static/css/autorization-style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
@@ -20,10 +21,10 @@ body {
    
 }
 .autorization-background{
-    
+    width: 57%;
     position: fixed;
-    left: 57.1%;
-    top: 20%;
+    left: 43%;
+    top: 7%;
     
 }
 .login-container{
@@ -38,12 +39,14 @@ body {
 }
 .field{
     display: grid;
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 input[type="text"], input[type="password"]{
-    width: 350px;
-    height: 40px;
+    width: 400px;
+    height: 50px;
+    font-size: 13pt;
+    
     
     border: 2px solid #E0E0E0;
     
@@ -58,7 +61,7 @@ input[type="text"], input[type="password"]{
 label{
     color: #344267;
     font-weight: 500;
-    font-size: 11pt;
+    font-size: 13pt;
     
 }
 input[type="text"]:focus, input[type="password"]:focus   {
@@ -72,10 +75,11 @@ input[type="text"]:focus, input[type="password"]:focus   {
 }
 input[type="submit"] {
     width: 200px;
-    height: 40px;
+    height: 50px;
     border-radius: 10px;
     border-style: none;
     color: white;
+    font-size: medium;
     background-color:#344267;
 }
 input[type="submit"]:focus {
@@ -98,16 +102,16 @@ input[type="submit"]:focus {
 .enter{
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 29px;
     line-height: 22px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     
     
     
 }
 .logo{
-    margin-right: 10px;
-    height: 30px;
+    margin-right: 20px;
+    height: 40px;
 }
 .top{
     margin-top: 25px;
@@ -115,6 +119,7 @@ input[type="submit"]:focus {
 }
 .top span{
     color: #344267 ;
+    font-size: large;
 }
 .modal{
     
@@ -130,14 +135,11 @@ input[type="submit"]:focus {
 .modal-content{
     
     
-    margin: 5% auto;
+    margin: 10% auto;
     padding: 20px;
-    width: 40%;
-    height: 60%;
+    width: 30%;
+    height: 45%;
     border-radius: 30px;
-    
-    
-    
 }
 .modal-close{
     color: #aaa;
@@ -148,12 +150,11 @@ input[type="submit"]:focus {
     padding-left: 96%;
     padding-top: 0px;
     margin-top: -20px;
-
-
 }
 h1{
-    font-weight: normal;
+    font-weight: 33pt;
     padding-left: 30px;
+    font-weight: normal;
 }
 h2{
 
@@ -161,13 +162,11 @@ h2{
     padding-left: 30px;
     padding-top: 30px;
     font-size: 16pt;
+    padding-bottom: -10px;
 }
 .modal-content .field{
     padding-left: 30px;
-
 }
 .modal-content .buttons{
     padding-left: 30px;
-
 }
-
