--- a/УЦСБ/static/css/autorization-style.css
+++ b/УЦСБ/static/css/autorization-style.css
@@ -138,7 +138,7 @@ input[type="submit"]:focus {
     margin: 10% auto;
     padding: 20px;
     width: 30%;
-    height: 45%;
+    height: 50%;
     border-radius: 30px;
 }
 .modal-close{
@@ -168,5 +168,6 @@ h2{
     padding-left: 30px;
 }
 .modal-content .buttons{
+    margin-top: 40px;
     padding-left: 30px;
 }
