--- a/УЦСБ/templates/newemployee.html
+++ b/УЦСБ/templates/newemployee.html
@@ -61,9 +61,9 @@
                                     <div class="info_table">
                                         <div class ="dowload">
                                             <div class="dowload-photo"><!--<div buttons  class="buttons"> -->
-                                                <a href="#" class="anyface_photo"></a>
+                                                <a href={{ next_id }} class="anyface_photo"></a>
                                                 <span class="text_span_photo">Загрузить фото</span>
-                                                <a href="#" class="dowload_photo"></a>                           
+                                                <a href={{ next_id }} class="dowload_photo"></a>
                                             </div>
                                         </div>
                                         <div class="form-wrap_info_employees">
